--- a/style.css
+++ b/style.css
@@ -57,11 +57,11 @@ body {
 }
 
 .logo_start img {
-    height: 205px;
+    height: 305px;
 }
 
 .start-button {
-    height: 18%;
+    height: 22%;
 }
 
 #interaction_1 {
@@ -151,13 +151,13 @@ body {
 
 #question {
     font-size: 30px;
-    color: rgb(11, 192, 11)
+    color: #3FA146;
 }
 
 
 /* CANVAS  */
 
-canvas { 
+canvas {
     background-size: contain;
     position: absolute;
     z-index: 59;
@@ -173,14 +173,14 @@ canvas {
 .game-over {
     background-image: url(./assets/riddlerover.png);
     background-size: contain;
-   
+
     background-repeat: no-repeat;
 }
 
 
 .game-over div div h1 {
     font-size: 150px;
-    color: rgb(64, 211, 64);
+    color: rgb(179, 19, 19);
 }
 
 #youlose {
@@ -191,4 +191,28 @@ canvas {
     transition-duration: 2s;
     position: absolute;
     z-index: 191;
+}
+
+/* 
+YOU WIN SCREEN */
+
+#youwin {
+    background-color: black;
+    height: 100%;
+    display: none;
+    opacity: 0;
+    transition-duration: 2s;
+    position: absolute;
+    z-index: 191;
+}
+
+.you-win {
+    background-image: url(./assets/youwin.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+.you-win div div h1 {
+    font-size: 150px;
+    color: rgb(102, 102, 102);
 }
