--- a/style.css
+++ b/style.css
@@ -61,8 +61,46 @@ body {
 }
 
 .start-button {
-    height: 22%;
+    height: 24%;
 }
+
+
+
+.text1 {
+    color: white;
+}
+
+/* RIDDLE SCREEN */
+
+#riddle1 {
+    opacity: 0;
+    position: absolute;
+    z-index: 58;
+    transition-duration: 2s;
+    
+    
+}
+#riddle-dialog {
+    display: block;
+    opacity: 0;
+    height: 100%;
+    position: absolute;
+    z-index: 59;
+    transition-duration: 2s;
+    transition-delay: 1s;
+}
+
+.riddle-text {
+    margin-right: 180px;
+}
+
+#riddle-dialog p {
+    color: white;
+    font-family: "Courier";
+    font-size: 15px;
+    white-space: pre-line;
+}
+  
 
 #interaction_1 {
     opacity: 0;
@@ -71,12 +109,6 @@ body {
     height: 100%;
 }
 
-#interaction_2 {
-    opacity: 0;
-    transition-duration: 2s;
-    transition-delay: 2s;
-    height: 100%;
-}
 
 .img_div img {
     height: 70%;
@@ -87,23 +119,17 @@ body {
 }
 
 .speech_baloon1 img {
-    height: 60%;
-}
+    height: 50%;
+} 
 
-.speech_baloon2 {
-    width: 20%;
-}
 
-.text1 {
-    color: white;
-}
+/* BATMAN SCREEN */
 
-#riddle1 {
+#interaction_2 {
     opacity: 0;
-    position: absolute;
-    z-index: 58;
     transition-duration: 2s;
-
+    transition-delay: 2s;
+    height: 100%;
 }
 
 #batman1 {
@@ -111,17 +137,44 @@ body {
     position: absolute;
     z-index: 56;
     height: 100%;
-    transition-duration: 2s;
+    transition-duration: 2s;   
+}
 
+#batman-dialog {
+    display: block;
+    opacity: 0;
+    height: 100%;
+    position: absolute;
+    z-index: 59;
+    transition-duration: 4s;
+    transition-delay: 1s;
+}
+
+.batman-text {
+    margin-left: 370px;
+}
+
+#batman-dialog p {
+    color: white;
+    font-family: "Courier";
+    font-size: 15px;
+    white-space: pre-line;
 }
 
 .img_div2 img {
     width: 280px;
 }
 
-.speech_baloon2 img {
-    height: 60%;
+.speech_baloon2 {
+    width: 20%;
 }
+
+
+.speech_baloon2 img {
+    height: 50%;
+}
+
+/* INSTRUCTIONS SCREEN */
 
 #instruc-text {
     opacity: 0;
@@ -134,6 +187,8 @@ body {
 
 .instruc-text-style {
     color: rgba(255, 255, 255, 0.849);
+    white-space: pre-line;
+    font-family: "Courier";
 }
 
 /* QUESTIOS STYLES */
@@ -193,8 +248,7 @@ canvas {
     z-index: 191;
 }
 
-/* 
-YOU WIN SCREEN */
+/* YOU WIN SCREEN */
 
 #youwin {
     background-color: black;
