--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 #BG {
-    background-image: url(/assets/gameBG.JPG);
+    background-image: url(/assets/gameBG.JPEG);
     background-size: cover;
     padding: 0;
     background-repeat: no-repeat;
